<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adminlogin"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/username" />
    <EditText
        android:id="@+id/edittext_Email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edittext_Password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/password1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:password="true"
        android:hint="@string/password" />
    <Button
        android:id="@+id/button_Login"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="#626d5c"
        android:textColor="#57c5ff"
        android:text="@string/login" />
    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progressbarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>